// EntityService
//
//
syntax = "proto3";

option csharp_namespace = "Axiverse.Services.Proto";

message Entity {
	string id = 1;

	Vector3 position = 2;

	Vector3 velocity = 3;

	Quaternion rotation = 4;
}

message EntityClass {

}

service EntityService {

	rpc GetState(GetStateRequest) returns (GetStateResponse);

	rpc CreateEntity(CreateEntityRequest) returns (CreateEntityResponse);

	rpc DeleteEntity(DeleteEntityRequest) returns (DeleteEntityResponse);

	rpc GetEntity(GetEntityRequest) returns (GetEntityResponse);

	rpc Stream(stream ClientEvent) returns (stream ServerEvent);

}

message Vector3 {
	float x = 1;
	float y = 2;
	float z = 3;
}

message Quaternion {
	float x = 1;
	float y = 2;
	float z = 3;
	float w = 4;
	// w is inferred from a normalized quaternion
}

message ClientEvent {
	Entity entity = 1;
}

message ServerEvent {
	repeated Entity entities = 1;
}

message GetStateRequest {

}

message GetStateResponse {
	float time = 1;
	float entities = 2;
}

message CreateEntityRequest {
	string name = 1;
}

message CreateEntityResponse {
	string id = 1;
}

message DeleteEntityRequest {
	string id = 1;
}

message DeleteEntityResponse {

}

message GetEntityRequest {
	string id = 1;
}

message GetEntityResponse {

}